# Doc2Latex

./: .gitignore  ARCHITECTURE.md  INPUT_FORMAT.md  README.md  pyproject.toml  语法规则书.md
data/input/急救手册/: .gitkeep
data/input/锻炼手册/: .gitkeep
data/input/食物手册/: .gitkeep
doc2latex/: __init__.py  main.py
doc2latex/config/: settings.py
doc2latex/core/: __init__.py  document_processor.py  handbook_processor.py  latex_generator.py  latex_generator_traditional.py  tree_manager.py
doc2latex/utils/: file_utils.py  text_utils.py  text_utils_traditional.py
src/: elegantbook.cls
src/doc2latex/: main.py
src/doc2latex/config/: __init__.py  modules.json  settings.py
src/doc2latex/core/: document_processor.py  latex_generator.py
src/doc2latex/utils/: __init__.py  doc_converter.py  logger.py
tests/: test_module_config.py
